--- a/style.css
+++ b/style.css
@@ -326,6 +326,22 @@ footer {
   white-space: nowrap;
 }
 
+.disabled-link {
+  position: relative;
+  pointer-events: none;
+}
+
+.disabled-link::after {
+  content: "X";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: red;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
 @media (max-width: 768px) {
   header h1 {
     font-size: 2rem;
