--- a/style.css
+++ b/style.css
@@ -311,6 +311,7 @@ footer {
   border: 1px solid #ddd;
   padding: 8px;
   text-align: left;
+  color:#333;
 }
 
 .about th {
@@ -324,22 +325,6 @@ footer {
 
 .no-wrap {
   white-space: nowrap;
-}
-
-.disabled-link {
-  position: relative;
-  pointer-events: none;
-}
-
-.disabled-link::after {
-  content: "X";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: red;
-  font-size: 2rem;
-  font-weight: bold;
 }
 
 @media (max-width: 768px) {
@@ -400,4 +385,20 @@ footer {
   .signature {
     height: 2.5rem;
   }
+}
+
+.disabled-link {
+  position: relative;
+  pointer-events: none;
+}
+
+.disabled-link::after {
+  content: "X";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: red;
+  font-size: 2rem;
+  font-weight: bold;
 }
