--- a/style.css
+++ b/style.css
@@ -84,6 +84,17 @@ nav a:hover {
   transform: scale(1.2);
 }
 
+.linkedin-embed {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.linkedin-embed iframe {
+  max-width: 100%;
+  height: 885px;
+}
+
 .container {
   max-width: 960px;
   margin: 0 auto;
@@ -348,6 +359,11 @@ footer {
     height: auto;
   }
 
+  .linkedin-embed iframe {
+    width: 100%;
+    height: 930px;
+  }
+  
   .container {
     padding: 10px;
   }
