--- a/style.css
+++ b/style.css
@@ -85,14 +85,21 @@ nav a:hover {
 }
 
 .linkedin-embed {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  background: #fff;
+  margin: 0 auto;
 }
 
 .linkedin-embed iframe {
-  max-width: 100%;
-  height: 885px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .container {
