--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ nav a:hover {
   position: relative;
   padding-bottom: 56.25%;
   height: 0;
-  overflow: hidden;
+  overflow: scroll;
   max-width: 100%;
   background: #fff;
   margin: 0 auto;
@@ -367,7 +367,8 @@ footer {
   }
 
   .linkedin-embed iframe {
-    padding-bottom: 75%;
+    width: 100%;
+    height: 930px;
   }
   
   .container {
