--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2876,7 +2876,8 @@ input, select, textarea {
 		height: 3.75em;
 		letter-spacing: 0.1em;
 		line-height: 3.75em;
-		padding: 0 2.25em;
+		padding-left: 20px;
+		padding-right: 20px;
 		text-align: center;
 		text-decoration: none;
 		text-transform: uppercase;
@@ -2984,7 +2985,8 @@ input, select, textarea {
 			input[type="button"],
 			button,
 			.button {
-				padding: 0;
+				padding-left: 20px;
+				padding-right: 20px;
 			}
 
 		}
@@ -4151,10 +4153,6 @@ input, select, textarea {
 			padding: 2em 1.5em 0.1em 1.5em ;
 		}
 
-	}
-
-	.hidden-project {
-		display: none;
 	}
 	
 	.signature {
