--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -652,6 +652,34 @@ section {
 	position: relative
 }
 
+.portfolio .portfolio-item img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+@media (max-width: 768px) {
+    .portfolio .portfolio-item {
+        width: 100%;
+        margin-bottom: 20px;
+        padding: 10px;
+        box-sizing: border-box;
+    }
+
+    .portfolio .portfolio-filters li {
+        font-size: 14px;
+        margin: 0 5px;
+        padding: 5px 2px;
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    .portfolio .portfolio-filters {
+        text-align: center;
+        margin-bottom: 15px;
+    }
+}
+
 .portfolio .portfolio-item .portfolio-info {
 	opacity: 0;
 	position: absolute;
@@ -1058,4 +1086,11 @@ section {
 
 .materialui {
 	background-color: #007FFF;
+}
+
+@media only screen and (max-width: 480px) {
+	.project-card img {
+	  width: 100%;
+	  height: auto;
+	}
 }
