--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -654,7 +654,7 @@ section {
 
 .portfolio .portfolio-item img {
     width: 100%;
-    height: auto;
+    height: 400px;
     object-fit: cover;
 }
 
