--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -506,7 +506,8 @@ section {
 	padding: 60px 0;
 	display: flex;
 	align-items: center;
-	justify-content: center
+	justify-content: center;
+	overflow: hidden;
 }
 
 .hero img {
@@ -515,7 +516,7 @@ section {
 	display: block;
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
+	object-fit: center;
 	z-index: 1
 }
 
@@ -549,6 +550,9 @@ section {
 }
 
 @media (max-width:768px) {
+	.hero {
+		padding: 347px 0;
+	}
 	.hero h2 {
 		font-size: 32px
 	}
@@ -1022,6 +1026,39 @@ section {
 	border-radius: 5px
 }
 
+.quick-links {
+	display: flex;
+	gap: 15px;
+	flex-wrap: wrap;
+	justify-content: left;
+}
+  
+.link-item {
+	display: flex;
+	align-items: center;
+	background-color: #f8f9fa;
+	border: 1px solid #dee2e6;
+	border-radius: 5px;
+	padding: 10px 15px;
+	text-decoration: none;
+	color: #212529;
+	transition: background-color 0.3s, border-color 0.3s;
+}
+  
+.link-item:hover {
+	background-color: #e9ecef;
+	border-color: #adb5bd;
+}
+  
+.link-item i {
+	font-size: 1.2rem;
+	margin-right: 10px;
+}
+  
+.link-item span {
+	font-size: 1rem;
+}
+
 .tag {
 	display: inline-block;
 	padding: 5px 10px;
@@ -1108,11 +1145,4 @@ section {
 
 .materialui {
 	background-color: #007FFF;
-}
-
-@media only screen and (max-width: 480px) {
-	.project-card img {
-	  width: 100%;
-	  height: auto;
-	}
 }
