--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1026,6 +1026,21 @@ section {
 	border-radius: 5px
 }
 
+.blog {
+	padding: 60px 0;
+ }
+ 
+ .blog-item {
+	margin-bottom: 20px;
+	margin-right: 10px;
+ }
+ 
+ .linkedin-embed iframe {
+	max-width: 100%;
+	height: 450px;
+	border: none;
+ }
+
 .quick-links {
 	display: flex;
 	gap: 15px;
