--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1027,21 +1027,23 @@ section {
 }
 
 .blog {
-	padding: 60px 0;
- }
- 
- .blog-item {
-	max-width: 700px;
-	max-height: 400px;
-	margin-bottom: 20px;
-	margin-right: 10px;
- }
- 
- .linkedin-embed iframe {
-	max-width: 100%;
-	height: 450px;
-	border: none;
- }
+    padding: 60px 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.blog-item {
+    flex: 1 1 calc(33.333% - 20px);
+    box-sizing: border-box;
+    margin-bottom: 20px;
+}
+
+.linkedin-embed iframe {
+    max-width: 100%;
+    max-height: 400px;
+    border: none;
+}
 
 .quick-links {
 	display: flex;
