--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1039,6 +1039,12 @@ section {
     margin-bottom: 20px;
 }
 
+@media (max-width: 768px) {
+    .blog-item {
+        flex: 1 1 100%;
+    }
+}
+
 .linkedin-embed iframe {
     max-width: 100%;
     max-height: 400px;
