--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -978,3 +978,11 @@ h1,h2,h3,h4,h5,h6{
 .vercel{
     background-color: #180009;
 }
+
+.react{
+    background-color: #53baff;
+}
+
+.gemini{
+    background-color: #f84747;
+}
