Added cardcrush as project

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -985,3 +985,11 @@ h1,h2,h3,h4,h5,h6{
 .gemini{
     background-color: #f84747;
 }
+
+.stripe {
+    background-color: #78429a;
+}
+
+.clerk {
+    background-color: #003b57;
+}
