--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -910,7 +910,10 @@ h1,h2,h3,h4,h5,h6{
 .tag{
     display:inline-block;
     padding:5px 10px;
-    margin:7px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 0px;
+    margin-left: 0px;
     border-radius:3px;
     color:#fff
 }
