--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -49,8 +49,16 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
 
+  .img {
+    flex-shrink: 0;
+    width: 50px;
+    height: auto;
+  }
+
   .project-image {
-    text-align: center;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
   }
 
   p {
